Small fixes
Fixed a bug with filters on registration landing not working.

Simplified code for Navigation - no more setIsLogin function, instead reads the pathname directly.

Heading AppBar no longer covers up content on mobile screens.

Updated packages.

--- a/src/theme/sizes.scss
+++ b/src/theme/sizes.scss
@@ -4,23 +4,40 @@ $break-large:1024px;
 $ipad-landscape-height: 768px;
 
 @mixin respond-to($media) {
-  @if $media == handhelds {
-    @media only screen and (max-width: $break-small) { @content; }
+  @if $media==handhelds {
+    @media only screen and (max-width: $break-small) {
+      @content;
+    }
   }
-  @else if $media == medium-screens {
-    @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) { @content; }
+
+  @else if $media==handhelds-vertical {
+    @media only screen and (max-height: $break-small) {
+      @content;
+    }
   }
-  @else if $media == wide-screens {
-    @media only screen and (min-width: $break-large +1) { @content; }
+
+  @else if $media==medium-screens {
+    @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) {
+      @content;
+    }
   }
-  @else if $media == medium-up-screens{
-    @media only screen and (min-width: $break-small + 1) { @content; }
+
+  @else if $media==wide-screens {
+    @media only screen and (min-width: $break-large +1) {
+      @content;
+    }
   }
-  @else if $media == ipad-landscape{
-    @media only screen 
-    and (min-width: $ipad-landscape-height)
-    and (max-width : $break-large)
-    {@content;}
+
+  @else if $media==medium-up-screens {
+    @media only screen and (min-width: $break-small + 1) {
+      @content;
+    }
+  }
+
+  @else if $media==ipad-landscape {
+    @media only screen and (min-width: $ipad-landscape-height) and (max-width : $break-large) {
+      @content;
+    }
   }
 }
 
